Add ProtobufXmlJsonProvider, add protobuf plugin java generator, sample service

--- a/pom.xml
+++ b/pom.xml
@@ -55,30 +55,63 @@
 	<dependency>
 		<groupId>com.googlecode.protobuf-java-format</groupId>
 		<artifactId>protobuf-java-format</artifactId>
-		<version>1.4</version>
+		<version>1.2</version>
 	</dependency>
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java</artifactId>
+      <version>2.6.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>19.0</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
 	
   </dependencies>
   <build>
-  <plugins>
-  <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-compiler-plugin</artifactId>
-	<version>3.3</version>
-	<configuration>
-		<source>1.8</source>
-		<target>1.8</target>
-	</configuration>  
-  </plugin>
-  <plugin>
-	<groupId>org.apache.maven.plugins</groupId>
-	<artifactId>maven-eclipse-plugin</artifactId>
-	<version>2.9</version>
-	<configuration>
-		<downloadSources>true</downloadSources>
-		<downloadJavadocs>true</downloadJavadocs>
-	</configuration>
-  </plugin>
-  </plugins>
+       <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>  
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-eclipse-plugin</artifactId>
+                <version>2.9</version>
+                <configuration>
+                    <downloadSources>true</downloadSources>
+                    <downloadJavadocs>true</downloadJavadocs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.google.protobuf.tools</groupId>
+                <artifactId>maven-protoc-plugin</artifactId>
+                <version>0.4.4</version>
+                <executions>
+                    <execution>
+                        <id>protoc</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>compile</goal>
+                            <goal>test-compile</goal>
+                        </goals>
+                        <configuration>
+                            <attachProtoSources>true</attachProtoSources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+       </plugins>
   </build>
 </project>
